--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -58,7 +58,7 @@
         </div>
         
         <div class="imagem-fernanda">
-            <img src="{% static 'img/fernanda.jpeg' %}" alt="Dra. Fernanda Silva">
+            <img src="{% static 'css/img/fernanda.jpeg' %}" alt="Dra. Fernanda Silva">
         </div>
     </section>
 
@@ -81,7 +81,7 @@
         <!-- Clínica -->
         <div class="clinica">
             <div class="especialidade-content">
-                <img src="{% static 'img/clinico.PNG' %}" alt="Dermatologia Clínica">
+                <img src="{% static 'css/img/clinico.PNG' %}" alt="Dermatologia Clínica">
                 <h3>Dermatologia Clínica</h3>
                 <p>Na dermatologia, os tratamentos mais comuns incluem acne, rosácea, psoríase, eczemas, melasma, micoses, urticária, vitiligo e dermatite seborreica.</p>
             </div>
@@ -90,7 +90,7 @@
         <!-- Estética -->
         <div class="Estética">
             <div class="especialidade-content">
-                <img src="{% static 'img/segunda.PNG' %}" alt="Dermatologia Estética">
+                <img src="{% static 'css/img/segunda.PNG' %}" alt="Dermatologia Estética">
                 <h3>Dermatologia Estética</h3>
                 <p>Uma pele saudável é o nosso objetivo. Oferecemos tratamentos de peeling, preenchimentos, aplicação de toxina botulínica e outros procedimentos para manter a saúde e a aparência jovem da pele.</p>
             </div>
@@ -99,7 +99,7 @@
         <!-- Tricologia -->
         <div class="Tricologia">
             <div class="especialidade-content">
-                <img src="{% static 'img/terceira.PNG' %}" alt="Tricologia">
+                <img src="{% static 'css/img/terceira.PNG' %}" alt="Tricologia">
                 <h3>Tricologia</h3>
                 <p>Diagnóstico e tratamento para alterações e problemas relacionados aos cabelos e couro cabeludo, como queda de cabelo e afinamento dos fios.</p>
             </div>
@@ -108,7 +108,7 @@
         <!-- Melasma -->
         <div class="Melasma">
             <div class="especialidade-content">
-                <img src="{% static 'img/quarto.PNG' %}" alt="Melasma">
+                <img src="{% static 'css/img/quarto.PNG' %}" alt="Melasma">
                 <h3>Melasma</h3>
                 <p>Tratamos melasma com cremes clareadores, peelings químicos e lasers para reduzir manchas escuras e uniformizar o tom da pele.</p>
             </div>
@@ -117,7 +117,7 @@
         <!-- Pediátrica -->
         <div class="Pediátrica">
             <div class="especialidade-content">
-                <img src="{% static 'img/quinta.PNG' %}" alt="Dermatologia Pediátrica">
+                <img src="{% static 'css/img/quinta.PNG' %}" alt="Dermatologia Pediátrica">
                 <h3>Pediátrica</h3>
                 <p>Conheça nossos tratamentos para verrugas virais, molusco contagioso, dermatite de fraldas, hemangioma e dermatite atópica, melhorando o conforto e bem-estar de crianças e bebês.</p>
             </div>
@@ -126,7 +126,7 @@
         <!-- Cicatrizes -->
         <div class="Cicatrizes">
             <div class="especialidade-content">
-                <img src="{% static 'img/ultima.PNG' %}" alt="Queloides e Cicatrizes">
+                <img src="{% static 'css/img/ultima.PNG' %}" alt="Queloides e Cicatrizes">
                 <h3>Queloides e Cicatrizes</h3>
                 <p>Na dermatologia, os tratamentos mais comuns abrangem acne, rosácea, psoríase, eczemas, melasma, micoses, urticária, vitiligo e dermatite seborreica.</p>
             </div>
@@ -142,15 +142,15 @@
                 <div class="wrapper">
                     <i id="left" class="fa-solid fa-angle-left"></i>
                     <div class="carrossel">
-                        <img src="{% static 'img/1.jpg' %}" alt="Laser de CO2 Fracionado">
-                        <img src="{% static 'img/2.jpg' %}" alt="Laser ND-YAG">
-                        <img src="{% static 'img/3.jpg' %}" alt="Laser de Alexandrite">
-                        <img src="{% static 'img/4.jpg' %}" alt="Luz Intensa Pulsada">
-                        <img src="{% static 'img/5.jpg' %}" alt="Dermatoscópio Digital">
-                        <img src="{% static 'img/6.jpg' %}" alt="Radiofrequência">
-                        <img src="{% static 'img/7.jpg' %}" alt="Microagulhamento com Drug Delivery">
-                        <img src="{% static 'img/8.jpg' %}" alt="Ultrassom Microfocado (HIFU)">
-                        <img src="{% static 'img/9.jpg' %}" alt="Luz Intensa Pulsada (IPL)">
+                        <img src="{% static 'css/img/1.jpg' %}" alt="Laser de CO2 Fracionado">
+                        <img src="{% static 'css/img/2.jpg' %}" alt="Laser ND-YAG">
+                        <img src="{% static 'css/img/3.jpg' %}" alt="Laser de Alexandrite">
+                        <img src="{% static 'css/img/4.jpg' %}" alt="Luz Intensa Pulsada">
+                        <img src="{% static 'css/img/5.jpg' %}" alt="Dermatoscópio Digital">
+                        <img src="{% static 'css/img/6.jpg' %}" alt="Radiofrequência">
+                        <img src="{% static 'css/img/7.jpg' %}" alt="Microagulhamento com Drug Delivery">
+                        <img src="{% static 'css/img/8.jpg' %}" alt="Ultrassom Microfocado (HIFU)">
+                        <img src="{% static 'css/img/9.jpg' %}" alt="Luz Intensa Pulsada (IPL)">
                     </div>
                     <i id="right" class="fa-solid fa-angle-right"></i>
                 </div>
