--- a/core/templates/core/tratamentos.html
+++ b/core/templates/core/tratamentos.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="img-topo-site">
-                        <img src="{% static 'img/foto.png' %}" alt="Imagem representativa dos tratamentos de dermatologia" class="img-fluid">
+                        <img src="{% static 'css/img-t/foto.png' %}" alt="Imagem representativa dos tratamentos de dermatologia" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="{% static 'css/img/undraw_love_it_heart_dxlp (2).svg' %}" alt="Imagem sobre o texto benefício">
+                        <img src="{% static 'css/img-t/undraw_love_it_heart_dxlp (2).svg' %}" alt="Imagem sobre o texto benefício">
                     </div>
                     <div class="txt-beneficios">
                         <h1>BENEFÍCIOS DO TRATAMENTO</h1>
@@ -93,7 +93,7 @@
 
         <div class="card-container">
             <div class="card">
-                <img src="{% static 'css/img/acne.png' %}" alt="Acne">
+                <img src="{% static 'css/img-t/acne.png' %}" alt="Acne">
                 <div class="card-content">
                     <h3>Acne</h3>
                     <p>Protocolos personalizados para controle da acne ativa e prevenção de cicatrizes, medicamentos tópicos, peelings ou laser.</p>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card">
-                <img src="{% static 'css/img/eczema.png' %}" alt="Eczema">
+                <img src="{% static 'css/img-t/eczema.png' %}" alt="Eczema">
                 <div class="card-content">
                     <h3>Eczema</h3>
                     <p>Protocolos personalizados para controle do eczema, utilizando medicamentos tópicos e hidratação intensiva.</p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="card">
-                <img src="{% static 'css/img/psoríase.png' %}" alt="Psoríase">
+                <img src="{% static 'css/img-t/psoríase.png' %}" alt="Psoríase">
                 <div class="card-content">
                     <h3>Psoríase</h3>
                     <p>Protocolos personalizados para manejo da psoríase, com medicamentos tópicos e fototerapia.</p>
@@ -122,7 +122,7 @@
 
         <div class="card-container">
             <div class="card">
-                <img src="{% static 'css/img/facial.png' %}" alt="Rejuvenescimento Facial">
+                <img src="{% static 'css/img-t/facial.png' %}" alt="Rejuvenescimento Facial">
                 <div class="card-content">
                     <h3>Rejuvenescimento Facial</h3>
                     <p>Protocolos avançados para redução de rugas, linhas de expressão e flacidez da pele, utilizando tratamentos como laser e preenchimentos faciais.</p>
@@ -131,7 +131,7 @@
             </div>
 
             <div class="card">
-                <img src="{% static 'css/img/depilação.png' %}" alt="Depilação a Laser">
+                <img src="{% static 'css/img-t/depilação.png' %}" alt="Depilação a Laser">
                 <div class="card-content">
                     <h3>Depilação a Laser</h3>
                     <p>Tratamento definitivo para remoção de pelos indesejados em áreas do corpo e rosto, utilizando tecnologia de laser moderna e segura.</p>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="card">
-                <img src="{% static 'css/img/capilar.png' %}" alt="Tratamento Capilar">
+                <img src="{% static 'css/img-t/capilar.png' %}" alt="Tratamento Capilar">
                 <div class="card-content">
                     <h3>Capilar</h3>
                     <p>Soluções para queda de cabelo e calvície, com uso de terapias tópicas, medicamentos orais e laser capilar.</p>
