--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -34,7 +34,7 @@
 
     <main>
         <div class="container">
-            <form class="form" action="{% url 'home_logado' %}" method="post">
+            <form class="form" action="{% url 'logado' %}" method="post">
                 {% csrf_token %}
                 
                 <!-- Campo E-mail -->
