--- a/core/static/css/home_logado.css
+++ b/core/static/css/home_logado.css
@@ -1,14 +1,25 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #e5caad; 
-  margin: 0;
-  padding: 0;
+/* Importando a fonte do Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-  
+/* Aplicando fonte Arial no corpo da página */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Arial', sans-serif; /* Fonte Arial com fallback para sans-serif */
+}
+
+/* Estilos gerais para o corpo da página */
+body {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 20px;
+    background: #d2c1af; /* Cor de fundo */
 }
 
 
-/* Estilo do cabeçalho */
 header {
   background-color: #ffffff;
   padding: 14px 10px;
@@ -82,4 +93,119 @@ nav ul a::after {
 
 nav ul a:hover::after {
   width: 100%;
+}
+
+
+/* Estilos do container principal do formulário */
+.container {
+    position: relative;
+    max-width: 700px;
+    width: 100%;
+    background: #fff;
+    padding: 25px;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* Sombras para dar profundidade */
+}
+
+/* Estilos para o cabeçalho do formulário */
+.container header {
+    font-size: 1.5rem;
+    color: #333;
+    font-weight: 500;
+    text-align: center;
+}
+
+/* Estilo do formulário */
+.form {
+    margin-top: 30px;
+}
+
+/* Estilo dos campos de entrada */
+.form .input-box {
+    width: 100%;
+    margin-top: 20px;
+}
+
+.input-box label {
+    color: #333;
+}
+
+/* Estilo dos campos de entrada e seleção */
+.form :where(.input-box input, .select-box) {
+    position: relative;
+    height: 50px;
+    width: 100%;
+    outline: none;
+    font-size: 1rem;
+    color: #707070;
+    margin-top: 8px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 0 15px;
+}
+
+/* Estilos para os campos de gênero */
+.gender-box h3 {
+    color: #333;
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 8px;
+}
+
+.form .gender-option {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+}
+
+.form .gender {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+}
+
+.gender input {
+    accent-color: #7c4f39;
+    ;
+}
+
+/* Estilos para o campo de seleção (tratamento e médica) */
+.select-box select {
+    height: 50px;
+    width: 100%;
+    outline: none;
+    border: 1px solid #ddd;
+    color: #707070;
+    font-size: 1rem;
+    border-radius: 6px;
+    padding: 0 15px;
+}
+
+/* Estilo do botão de envio */
+.form button {
+    height: 55px;
+    width: 100%;
+    color: #fff;
+    font-size: 1rem;
+    border: none;
+    margin-top: 30px;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: all 0.2s ease;
+    background-color: #7c4f39;
+}
+
+.form button:hover {
+    background-color: #613e2c;
+}
+
+/* Responsividade para telas menores */
+@media screen and (max-width: 500px) {
+    .form .column {
+        flex-wrap: wrap;
+    }
+
+    .form :where(.gender-option, .gender) {
+        row-gap: 15px;
+    }
 }
