--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -25,6 +25,7 @@
                     <li><a href="{% url 'tecnologias' %}">TECNOLOGIAS</a></li>
                     <li><a href="{% url 'consultorio' %}">CONSULTÓRIO</a></li>
                     <li><a href="{% url 'sobrenos' %}">SOBRE NÓS</a></li>
+                    <li><a href="{% url 'home_medico' %}">medico</a></li>
                 </ul>
             </nav>
         </div>
