--- a/core/static/css/home_medico.css
+++ b/core/static/css/home_medico.css
@@ -1,31 +1,131 @@
+/* Resetando margens e padding */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+}
+
+/* Estilo geral do corpo da página */
+body {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #d2c1af; /* Cor de fundo */
+  padding: 0 20px;
+}
+
+/* Estilo do cabeçalho */
+header {
+background-color: #ffffff;
+padding: 14px 10px;
+display: flex;
+align-items: center;
+justify-content: space-between;
+position: relative;
+z-index: 2; 
+}
+
+/* Tabela */
 table {
   width: 100%;
   border-collapse: collapse;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+  border-radius: 8px; /* Bordas arredondadas */
+  overflow: hidden; /* Para garantir que as bordas arredondadas apareçam corretamente */
+  background-color: white;
+  margin-top: 20px;
 }
+
+/* Cabeçalho da tabela */
 th,
 td {
-  border: 1px solid #ddd;
-  padding: 8px;
+  padding: 12px 15px;
   text-align: left;
+  font-size: 14px;
+  color: #333;
+  border: 1px solid #ddd;
 }
+
+/* Estilo do cabeçalho da tabela */
 th {
-  background-color: #f4f4f4;
+  background-color: #7c4f39; /* Cor de fundo do cabeçalho */
+  color: white;
+  font-weight: 600;
 }
+
+/* Efeito hover nas linhas da tabela */
 tr:hover {
-  background-color: #f1f1f1;
-}
-.actions button {
-  margin-right: 5px;
-  padding: 5px 10px;
+  background-color: #f9f9f9;
   cursor: pointer;
 }
-.actions .edit {
-  background-color: #4caf50;
-  color: white;
-  border: none;
+
+/* Estilo da coluna de ações (botões) */
+.actions {
+  display: flex;
+  gap: 10px;
 }
-.actions .delete {
-  background-color: #f44336;
-  color: white;
+
+.actions button {
+  padding: 8px 12px;
+  font-size: 14px;
+  border-radius: 6px;
   border: none;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.actions .edit {
+  background-color: #7b5e46;
+  color: white;
+}
+
+.actions .edit:hover {
+  background-color: #4f3723;
+  transform: scale(1.05);
+}
+
+.actions .delete {
+  background-color: #6d504e;
+  color: white;
+}
+
+.actions .delete:hover {
+  background-color: #4d3736;
+  transform: scale(1.05);
+}
+
+/* Adiciona o efeito de foco nos botões */
+.actions button:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilo do container da página (principal) */
+.container {
+  position: relative;
+  max-width: 1000px;
+  width: 100%;
+  background: #fff;
+  padding: 25px;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo do formulário */
+.form {
+  margin-top: 30px;
+}
+
+/* Responsividade */
+@media screen and (max-width: 500px) {
+  th, td {
+      padding: 10px;
+  }
+
+  .actions {
+      display: block;
+      gap: 5px;
+  }
 }
